--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -191,3 +191,20 @@ footer.visible {
         opacity: 0;
     }
 }
+
+
+#remove-score-button {
+      position: absolute;
+      top: -7%;
+      left: 44%;
+      border: none;
+        border-radius: 50%;
+}
+
+#remove-profile-button {
+      position: absolute;
+      top: -10%;
+      left: 42%;
+      border: none;
+        border-radius: 50%;
+}
