--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -77,7 +77,7 @@
                         
                             <li class="page-item active"><a class="page-link" href="">My Sheet music</a></li>
                             <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_liked_scores' profile.pk %}">Liked scores</a></li>
-                        {% if profile.pk == user_profile.pk %}
+                        {% if profile.pk == user_profile.pk or user.is_staff or user.is_superuser %}
                             <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_purchased_scores' profile.pk %}">Purchased scores</a></li>
                         {% endif %}
                     </ul>
@@ -93,7 +93,7 @@
                         <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
 
                                 <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
-                            {% if profile.pk == user_profile.pk %}
+                            {% if profile.pk == user_profile.pk or user.is_staff or user.is_superuser%}
                                 <a href="{% url 'sheetmusic:visualize_score' pk=score.pk %}" class="btn btn-warning ms-1">Visualize</a>
                                 <a href="{% url 'sheetmusic:score_delete' score_pk=score.pk %}" class="btn btn-danger ms-1">Delete</a>
                             {% endif %}
