--- a/PianoBazaar/sheetmusic/templates/sheetmusic/home.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/home.html
@@ -6,3 +6,39 @@
 {% block content %}
     {% include 'sheetmusic/score_list.html' %}
 {% endblock %}
+
+{% block modal %}
+{{ block.super }}
+    {% if delete_score_modal %}
+        {% if user.is_staff or user.is_superuser %}
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-3" id="staticBackdropLabel">Delete Score</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                          <h5> {{ user.username }}, are you sure you want to delete {{ delete_score_name }} score? </h5>
+                      </div>
+                      <div class="modal-footer">
+    
+                          <form action="{% url 'sheetmusic:score_delete' score_pk=delete_score_pk  %}" method="post">
+                              {% csrf_token %}
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              <button type="submit" class="btn btn-danger">Confirm</button>
+                          </form>
+    
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    const myModal = bootstrap.Modal.getOrCreateInstance(document.getElementById('staticBackdrop'));
+                    myModal.show();
+                  });
+            </script>
+        {% endif %}
+    {% endif %}
+{% endblock %}
