--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -50,14 +50,28 @@
                     </li>
                 {% endif %}
 
-                {% if page == 'upload score' %}
-                    <li class="nav-item ms-5">
-                        <a class="nav-link btn btn-primary border border-primary-subtle" href="{% url 'sheetmusic:score_upload' %}">Upload score</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item ms-5">
-                        <a class="nav-link btn btn-primary" href="{% url 'login' %}?next=/sheetmusic/upload scores/">Upload score</a>
-                    </li>
+                {% if not user.is_superuser %}
+
+                    {% if user.is_authenticated %}
+
+                        {% if page == 'upload score' %}
+                            <li class="nav-item ms-5">
+                                <a class="nav-link btn btn-primary border border-primary-subtle" href="{% url 'sheetmusic:score_upload' %}">Upload score</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item ms-5">
+                                <a class="nav-link btn btn-primary" href="{% url 'sheetmusic:score_upload' %}">Upload score</a>
+                            </li>
+                        {% endif %}
+
+                    {% else %}
+
+                        <li class="nav-item ms-5">
+                                <a class="nav-link btn btn-primary" href="{% url 'login' %}?next=/sheetmusic/upload scores/">Upload score</a>
+                        </li>
+
+                    {% endif %}
+
                 {% endif %}
 
                 {% if page == 'profiles' %}
@@ -71,25 +85,44 @@
                 {% endif %}
             </ul>
         {% if user.is_authenticated %}
-            <ul class="navbar-nav ms-auto me-4">
-                <li class="nav-item">
-                    <div class="dropdown dropstart text-end">
-                      <button type="button" class="nav-link btn btn-primary dropdown-toggle border border-primary-subtle" data-bs-toggle="dropdown">
-                          {{ user.username }}
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:arranger' pk=user_profile.id %}">My Profile</a></li>
-                          <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:view_shopping_cart' pk=user_profile.id %}">My Shopping Cart</a></li>
-                        <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:sales_insights' pk=user_profile.id %}">Sales Insights</a></li>
-                        <li><a class="dropdown-item nav-link" href="{% url 'logout' %}">Logout</a></li>
-                      </ul>
-                    </div>
-                </li>
-            </ul>
+            {% if user.is_superuser %}
+                <ul class="navbar-nav ms-auto me-4">
+                    <li class="nav-item">
+                        <div class="dropdown dropstart text-end">
+                          <button type="button" class="nav-link btn btn-primary dropdown-toggle border border-primary-subtle" data-bs-toggle="dropdown">
+                              {{ user.username }}
+                          </button>
+                          <ul class="dropdown-menu">
+                              <li><a class="dropdown-item nav-link" href="{% url 'register-staff' %}">Create Staff Account</a></li>
+                            <li><a class="dropdown-item nav-link" href="{% url 'logout' %}">Logout</a></li>
+                          </ul>
+                        </div>
+                    </li>
+                </ul>
+            {% else %}
+                <ul class="navbar-nav ms-auto me-4">
+                    <li class="nav-item">
+                        <div class="dropdown dropstart text-end">
+                          <button type="button" class="nav-link btn btn-primary dropdown-toggle border border-primary-subtle" data-bs-toggle="dropdown">
+                              {{ user.username }}
+                          </button>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:arranger' pk=user_profile.id %}">My Profile</a></li>
+                              <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:view_shopping_cart' pk=user_profile.id %}">My Shopping Cart</a></li>
+                            <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:sales_insights' pk=user_profile.id %}">Sales Insights</a></li>
+                            <li><a class="dropdown-item nav-link" href="{% url 'logout' %}">Logout</a></li>
+                          </ul>
+                        </div>
+                    </li>
+                </ul>
+            {% endif %}
         {% else %}
             <ul class="navbar-nav ms-auto me-4">
                 <li class="nav-item">
-                    <a id="login_link_button" class="nav-link btn btn-primary border border-primary-subtle" href="{% url 'login' %}">Log in</a>
+                    <div class="btn-group btn-group-lg">
+                        <a id="sign_up_link_button" class="nav-link btn btn-primary border border-primary-subtle" href="{% url 'register' %}">Sign up</a>
+                        <a id="login_link_button" class="nav-link btn btn-primary border border-primary-subtle" href="{% url 'login' %}">Log in</a>
+                    </div>
                 </li>
             </ul>
         {% endif %}
