total sold copies

--- a/PianoBazaar/sheetmusic/templates/sheetmusic/sales_insights.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/sales_insights.html
@@ -44,6 +44,8 @@
         
             <div class="col-3 offset-1">
                 <p class="h3">Total Revenue: {{ total_earnings }}€</p>
+                <br>
+                <p class="h3">Total sold copies: {{ total_copies_sold }}</p>
             </div>
         </div>
 {% endblock %}
