--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_list.html
@@ -23,7 +23,24 @@
                     {% endif %}
                 
                     <div class="card-header">
-                        <h4 class="card-title">@{{ arranger.user.username }}</h4>
+                        <h4 class="card-title">@{{ arranger.user.username }}
+                        
+                        {% if arranger.user.is_staff %}
+                            <span class="badge" style="background-color: #ff3ca7;">GM</span>
+                        {% endif %}
+                        
+                        {% if arranger.n_sold_copies > 1 %}
+                            <span class="badge" style="background-color: #ff913a;">Salesman</span>
+                        {% endif %}
+                    
+                        {% if arranger.n_purchased_scores > 1 %}
+                            <span class="badge" style="background-color: deepskyblue">Squandering</span>
+                        {% endif %}
+                    
+                        {% if arranger.likes_count > 1 %}
+                            <span class="badge" style="background-color: crimson">Loved</span>
+                        {% endif %}</h4>
+                    
                         <h5 class="card-title"> aka {{ arranger.user.first_name }} {{ arranger.user.last_name}}</h5>
                     </div>
                     
