--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -148,7 +148,7 @@
         {% endif %}
     </nav>
 
-    <div class="jumbotron text-center mt-3" style="margin-bottom:0">
+    <div class="jumbotron text-center" style="margin-bottom:0">
         {% block header %}{% endblock %}
     </div>
 
@@ -211,7 +211,7 @@
         {% endif %}
     {% endblock %}
 
-     <section class="container-fluid mt-2">
+     <section class="container-fluid mt-3">
         {% block content %}
         <!-- Contenuto variabile inserito dalle pagine figlie -->
         {% endblock %}
