--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -34,7 +34,7 @@
                       <span class="badge" style="background-color: crimson">Loved</span>
                   {% endif %}
               </h2>
-                <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" width="150" height="150" style="margin-left: 20px;">
+                <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" width="150" height="150" style="margin-left: 20px;  object-fit: cover">
             </div>
 
             <div class="col-md-8 border border-3 rounded-5 mb-3">
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item">
                         {% if profile.x_account_id %}
-                      <a class="nav-link" href="https://www.x.com/{{ profile.x_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <a class="nav-link mt-2" href="https://www.x.com/{{ profile.x_account_id }}/" target="_blank" rel="noopener noreferrer">
                           <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.x_account_id }}</h5>
                       </a>
                         {% endif %}
